@@ -1,5 +1,10 @@
 2009-04-20  Stephen Shaw  <sshaw@decriptor.com>
 
+	* Controller.cs:
+	* DataAccess.cs: Changed to reflect the db changes
+
+2009-04-20  Stephen Shaw  <sshaw@decriptor.com>
+
 	* DataAccess.cs: Removed the DataAccess interface
 
 2009-04-20  Stephen Shaw  <sshaw@decriptor.com>
