@@ -1,5 +1,10 @@
 2009-04-20  Stephen Shaw  <sshaw@decriptor.com>
 
+	* SQLite.cs: Huge changes here. Created 2 methods that
+	  everything can call to execute the db commands.
+
+2009-04-20  Stephen Shaw  <sshaw@decriptor.com>
+
 	* SQLite.cs: Removed the DataAccess interface
 
 2009-04-20  Stephen Shaw  <sshaw@decriptor.com>
